--- a/style.css
+++ b/style.css
@@ -35,7 +35,10 @@ body {
   transition: all 0.1s;
   color:rgb(20, 20, 20);
 }
-
+.key:hover{
+  transform: scale(1.2);
+  background-color: hsl(55, 29%, 75%);
+}
 
 /* js classes */
 .play {
@@ -45,22 +48,6 @@ body {
 }
 
 /* responsive design */
-.mobile-heading {
-  display: none;
-  color: hsl(0, 75%, 50%);
-  text-shadow: 0 0 1px black;
-  background-color: rgb(236, 231, 192);
-  border: 2px solid rgb(131, 0, 0);
-  font-size: 1rem;
-}
-
-@media (hover: none) {
-  .mobile-heading {
-    display: block;
-    opacity: 0;
-    animation: entry 2s 1s forwards;
-  }
-}
 
 @media only screen and (max-width: 760px) {
   .key{
